actualiza importacion y exportacion