@@ -1,60 +1,87 @@
 package informviva.gest.service;
 
+import informviva.gest.dto.VentaPorCategoriaDTO;
 import informviva.gest.dto.VentaResumenDTO;
 import org.springframework.stereotype.Service;
 
-import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.util.Collections;
-
-
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
+ * Servicio para generar resúmenes de ventas
+ *
  * @author Roberto Rivas
  * @version 2.0
- *
  */
-
-// Servicio para inicializar datos
 @Service
 public class ResumenVentasServicio {
 
-    public <T> java.util.List<T> inicializarLista(java.util.List<T> lista) {
-        return lista != null ? lista : java.util.Collections.emptyList();
+    /**
+     * Inicializa un mapa a partir de una lista de ventas por categoría
+     * CORRECCIÓN: Cambiar signatura para recibir List en lugar de Map
+     *
+     * @param ventasPorCategoria Lista de ventas agrupadas por categoría
+     * @return Mapa con categoría como clave y total como valor
+     */
+    public Map<String, Object> inicializarMapa(List<VentaPorCategoriaDTO> ventasPorCategoria) {
+        return ventasPorCategoria.stream()
+                .collect(Collectors.toMap(
+                        VentaPorCategoriaDTO::getCategoria,
+                        dto -> (Object) dto.getTotal()
+                ));
     }
 
-    public <K, V> java.util.Map<K, V> inicializarMapa(java.util.Map<K, V> mapa) {
-        return mapa != null ? mapa : java.util.Collections.emptyMap();
+    /**
+     * Convierte lista a mapa de String a Double (método auxiliar)
+     *
+     * @param ventasPorCategoria Lista de ventas por categoría
+     * @return Mapa con categoría como clave y total como valor Double
+     */
+    public Map<String, Double> convertirListaAMapa(List<VentaPorCategoriaDTO> ventasPorCategoria) {
+        if (ventasPorCategoria == null || ventasPorCategoria.isEmpty()) {
+            return Map.of(); // Mapa vacío
+        }
+
+        return ventasPorCategoria.stream()
+                .collect(Collectors.toMap(
+                        VentaPorCategoriaDTO::getCategoria,
+                        VentaPorCategoriaDTO::getTotal
+                ));
     }
+
+    /**
+     * Método sobrecargado para compatibilidad con código existente
+     * que espera Map como parámetro
+     *
+     * @param ventasPorCategoriaMap Mapa de ventas por categoría
+     * @return El mismo mapa envuelto en Map<String, Object>
+     */
+    public Map<String, Object> inicializarMapa(Map<String, Double> ventasPorCategoriaMap) {
+        if (ventasPorCategoriaMap == null || ventasPorCategoriaMap.isEmpty()) {
+            return Map.of();
+        }
+
+        return ventasPorCategoriaMap.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> (Object) entry.getValue()
+                ));
+    }
+
+    /**
+     * Crea un resumen de ventas vacío
+     *
+     * @return Un objeto VentaResumenDTO con listas vacías
+     */
 
     public VentaResumenDTO crearResumenVentasVacio() {
-        VentaResumenDTO dto = new VentaResumenDTO();
-        dto.setTotalVentas(BigDecimal.ZERO);
-        dto.setTotalTransacciones(0L);
-        dto.setTicketPromedio(BigDecimal.ZERO);
-        dto.setClientesNuevos(0L);
-        dto.setProductosMasVendidos(Collections.emptyList());
-        dto.setVentasPorPeriodo(Collections.emptyList());
-        dto.setVentasPorCategoria(Collections.emptyMap());
-        return dto;
-    }
-
-    public LocalDate[] validarFechas(String startDate, String endDate) {
-        LocalDate hoy = LocalDate.now();
-        LocalDate inicioMes = hoy.withDayOfMonth(1);
-        LocalDate fechaInicio = inicioMes;
-        LocalDate fechaFin = hoy;
-
-        if (startDate != null && !startDate.isEmpty()) {
-            fechaInicio = LocalDate.parse(startDate);
-        }
-        if (endDate != null && !endDate.isEmpty()) {
-            fechaFin = LocalDate.parse(endDate);
-        }
-        if (fechaInicio.isAfter(fechaFin)) {
-            fechaInicio = inicioMes;
-            fechaFin = hoy;
-        }
-        return new LocalDate[]{fechaInicio, fechaFin};
+        VentaResumenDTO resumen = new VentaResumenDTO();
+        resumen.setVentasPorVendedor(new ArrayList<>());
+        resumen.setVentasPorPeriodo(new ArrayList<>());
+        resumen.setVentasPorCategoria(new ArrayList<>());
+        resumen.setProductosMasVendidos(new ArrayList<>());
+        return resumen;
     }
 }
